--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: row;
   height: 90vh;
-  overflow: hidden;
 }
 
 .first-component {
   flex: 0 0 20%;
   padding: 10px;
   background-color: #f5f5f5;
+  overflow-y: auto;
 }
 
 .middle-component {
@@ -49,4 +49,10 @@
 .post-content {
   padding: 20px;
   background-color: #fff;
+}
+
+@media (max-width: 768px) {
+  .middle-component {
+    width: 100%; /* Full width on smaller screens as well */
+  }
 }
